--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-html {
+html{
     scroll-behavior: smooth;
 }
 
@@ -6,17 +6,23 @@ body{
     margin: 0;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     background-color:whitesmoke;
-    text-align: center;
 }
 
 .nav-imagem {
-    background-image: url("imagens/fundonav.jpeg") ;
+    position: fixed;
+    background-image: url("../img/fundonav.jpeg");
     background-size: cover;
     background-position: center;
     height: 13%;
     width: 100%;
     display: flex;
     align-items: center;
+}
+
+#voltainicio2{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
 }
 
 .estbotao{
@@ -30,22 +36,36 @@ body{
     text-decoration: none;
     cursor: pointer;
     font-size: 100%;
-    margin-right
-    : 10px
+    margin-right: 10px;
 }
 
-.voltainicio2{
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
+.todosprodutos{
+    display: flex;
+    justify-content: space-between;
+    margin-left: 2%;
+    margin-right: 2%;
+    margin-top: 2%;
+    margin-bottom: 2%;  
 }
 
-input{
-    height: 4spx;
-    width: 200px;
-    border-radius: 5px;
-    border-color:#02a4cd;
+.produtos{
+    height: 30%;
+    width: 30%;
+    padding: 1%;
+    border-radius: 2%;
     text-align: center;
+    background-color:#1d4049;
+}  
+
+button{
+    border-style: solid;
+    border-color: white;
+    height: 4%; width: 30%;
+    color: #04b4ff;
+    background-color: white;
+    border-radius: 10%;
+    font-size: 100%;
+    cursor: pointer;
 }
 
 .footer{
