--- a/assets/css/stylelogin.css
+++ b/assets/css/stylelogin.css
@@ -1,4 +1,4 @@
-html{
+html {
     scroll-behavior: smooth;
 }
 
@@ -6,11 +6,11 @@ body{
     margin: 0;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     background-color:whitesmoke;
+    text-align: center;
 }
 
 .nav-imagem {
-    position: fixed;
-    background-image: url("imagens/fundonav.jpeg") ;
+    background-image: url("../img/fundonav.jpeg") ;
     background-size: cover;
     background-position: center;
     height: 13%;
@@ -19,10 +19,8 @@ body{
     align-items: center;
 }
 
-#voltainicio2{
-    position: fixed;
-    right: 20px;
-    bottom: 20px;
+.nav-imagem img {
+    height: 150px;
 }
 
 .estbotao{
@@ -36,36 +34,22 @@ body{
     text-decoration: none;
     cursor: pointer;
     font-size: 100%;
-    margin-right: 10px;
+    margin-right
+    : 10px
 }
 
-.todosprodutos{
-    display: flex;
-    justify-content: space-between;
-    margin-left: 2%;
-    margin-right: 2%;
-    margin-top: 2%;
-    margin-bottom: 2%;  
+.voltainicio2{
+    position: fixed;
+    right: 20px;
+    bottom: 20px;
 }
 
-.produtos{
-    height: 30%;
-    width: 30%;
-    padding: 1%;
-    border-radius: 2%;
+input{
+    height: 4spx;
+    width: 200px;
+    border-radius: 5px;
+    border-color:#02a4cd;
     text-align: center;
-    background-color:#1d4049;
-}  
-
-button{
-    border-style: solid;
-    border-color: white;
-    height: 4%; width: 30%;
-    color: #04b4ff;
-    background-color: white;
-    border-radius: 10%;
-    font-size: 100%;
-    cursor: pointer;
 }
 
 .footer{
@@ -76,4 +60,8 @@ button{
     font-size: 15px;
     color:white;
     text-align: center;
+}
+
+.footer img {
+    height: 300px;
 }
